--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vous êtes ici – Démo</title>
+    <title>Diane Breton – Communication & Concours</title>
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+    <meta name="description" content="Studio Diane Breton : communication, identité visuelle et réponses à concours pour l’immobilier et la ville durable." />
     <style>
       :root {
         --bg: #ffffff;
         --text: #111111;
-        --accent: #ff5c35;
+        --accent: #e34d3a; /* rouge vermillon Diane Breton */
         --muted: #6c6c6c;
       }
 
@@ -27,7 +28,6 @@
         color: var(--text);
         line-height: 1.5;
       }
-
       /* ---------- LAYOUT ---------- */
       header {
         position: sticky;
@@ -37,27 +37,23 @@
         z-index: 1000;
         border-bottom: 1px solid rgba(0, 0, 0, 0.05);
       }
-
       .container {
         max-width: 1200px;
         padding: 0 1.5rem;
         margin: 0 auto;
       }
-
       .nav {
         display: flex;
         align-items: center;
         justify-content: space-between;
         height: 64px;
       }
-
       .logo {
         font-weight: 800;
         font-size: 1.25rem;
         text-transform: lowercase;
         letter-spacing: -0.5px;
       }
-
       .menu {
         display: flex;
         gap: 1.25rem;
@@ -65,14 +61,12 @@
         margin: 0;
         padding: 0;
       }
-
       .menu a {
         text-decoration: none;
         color: var(--text);
         font-weight: 500;
         position: relative;
       }
-
       .menu a::after {
         content: "";
         position: absolute;
@@ -83,11 +77,9 @@
         background: var(--accent);
         transition: width 0.3s ease;
       }
-
       .menu a:hover::after {
         width: 100%;
       }
-
       /* ---------- HERO ---------- */
       .hero {
         min-height: 88vh;
@@ -98,40 +90,34 @@
         padding: 3rem 0;
         background: var(--bg);
       }
-
       .hero h1 {
         font-size: clamp(2.5rem, 5vw + 1rem, 4.75rem);
         font-weight: 800;
         margin: 0;
         letter-spacing: -1px;
       }
-
       .hero p {
         margin-top: 1rem;
         font-size: 1.125rem;
-        max-width: 40ch;
+        max-width: 45ch;
         margin-inline: auto;
         color: var(--muted);
       }
-
       /* ---------- PROJECTS GRID ---------- */
       .projects {
         padding: 5rem 0 6rem;
         background: var(--bg);
       }
-
       .projects h2 {
         font-size: 2rem;
         margin-bottom: 2.5rem;
         text-align: center;
       }
-
       .grid {
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
         gap: 2rem;
       }
-
       .card {
         position: relative;
         overflow: hidden;
@@ -141,14 +127,12 @@
         cursor: pointer;
         transition: transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
       }
-
       .card img {
         width: 100%;
         height: 100%;
         object-fit: cover;
         display: block;
       }
-
       .card .overlay {
         position: absolute;
         inset: 0;
@@ -160,15 +144,12 @@
         opacity: 0;
         transition: opacity 0.3s ease;
       }
-
       .card:hover .overlay {
         opacity: 1;
       }
-
       .card:hover {
         transform: translateY(-6px);
       }
-
       /* ---------- FOOTER ---------- */
       footer {
         padding: 2.5rem 0;
@@ -177,19 +158,16 @@
         font-size: 0.875rem;
         color: var(--muted);
       }
-
       /* ---------- ANIMATIONS ---------- */
       .fade {
         opacity: 0;
         transform: translateY(30px);
         transition: opacity 0.75s ease-out, transform 0.75s ease-out;
       }
-
       .fade.show {
         opacity: 1;
         transform: translateY(0);
       }
-
       /* ---------- RESPONSIVE ---------- */
       @media (max-width: 640px) {
         .menu {
@@ -201,87 +179,87 @@
   <body>
     <header>
       <div class="container nav">
-        <div class="logo">vous êtes ici</div>
+        <div class="logo">diane&nbsp;breton</div>
         <ul class="menu">
           <li><a href="#projets">projets</a></li>
-          <li><a href="#apropos">à&nbsp;propos</a></li>
-          <li><a href="#savoir">savoir‑faire</a></li>
+          <li><a href="#services">services</a></li>
+          <li><a href="#apropos">studio</a></li>
           <li><a href="#contact">contact</a></li>
         </ul>
       </div>
     </header>
-
     <main>
       <!-- Hero -->
       <section class="hero fade" data-animate>
         <div class="container">
-          <h1>Nous créons des identités et expériences pour la ville de demain.</h1>
-          <p>Une approche éditoriale et visuelle pensée pour les acteurs urbains innovants.</p>
+          <h1>Communication <span style="color:var(--accent);">+</span> concours<br> pour bâtir la ville de demain.</h1>
+          <p>Le studio Diane Breton accompagne promoteurs, architectes et acteurs publics dans leurs projets urbains : identité, stratégie éditoriale et réponses à concours immobiliers.</p>
         </div>
       </section>
-
       <!-- Projects -->
       <section id="projets" class="projects">
         <div class="container">
-          <h2 class="fade" data-animate>Derniers projets</h2>
+          <h2 class="fade" data-animate>Dernières réalisations</h2>
           <div class="grid">
             <!-- Card 1 -->
             <article class="card fade" data-animate>
-              <img src="https://source.unsplash.com/random/640x480?architecture-1" alt="Projet 1" />
+              <img src="https://source.unsplash.com/random/640x480?architecture,urban" alt="Concours ZAC Belleville" />
               <div class="overlay">
-                <h3>La Promenade des ailes</h3>
+                <h3>ZAC Belleville – Offre lauréate</h3>
               </div>
             </article>
             <!-- Card 2 -->
             <article class="card fade" data-animate>
-              <img src="https://source.unsplash.com/random/640x480?architecture-2" alt="Projet 2" />
+              <img src="https://source.unsplash.com/random/640x480?architecture,modern" alt="Plaquette Siège Groupe Alta" />
               <div class="overlay">
-                <h3>SVU — Livret d'accueil</h3>
+                <h3>Alta Group – Plaquette siège social</h3>
               </div>
             </article>
             <!-- Card 3 -->
             <article class="card fade" data-animate>
-              <img src="https://source.unsplash.com/random/640x480?city" alt="Projet 3" />
+              <img src="https://source.unsplash.com/random/640x480?city,night" alt="Identité Quartier Aster" />
               <div class="overlay">
-                <h3>Linkcity 2023</h3>
+                <h3>Quartier Aster – Branding urbain</h3>
               </div>
             </article>
             <!-- Card 4 -->
             <article class="card fade" data-animate>
-              <img src="https://source.unsplash.com/random/640x480?building" alt="Projet 4" />
+              <img src="https://source.unsplash.com/random/640x480?building,future" alt="Concours MixCité" />
               <div class="overlay">
-                <h3>Arkize</h3>
+                <h3>MixCité 2024 – Dossier de consultation</h3>
               </div>
             </article>
           </div>
         </div>
       </section>
-
-      <!-- About -->
-      <section id="apropos" class="hero fade" data-animate style="background:#f9f9f9;">
+      <!-- Services -->
+      <section id="services" class="hero fade" data-animate style="background:#f9f9f9;">
         <div class="container">
-          <h2>À propos</h2>
-          <p>Vous&nbsp;êtes&nbsp;ici est un collectif de créateurs, stratèges et designers dédié à façonner des récits urbains singuliers. Nous accompagnons les porteurs de projets pour donner vie à leurs ambitions à travers des identités fortes et des supports innovants.</p>
+          <h2>Services</h2>
+          <p>• Identité visuelle & naming<br>• Stratégie éditoriale & contenus<br>• Dossiers de consultation & mémoires techniques<br>• Design graphique print & digital<br>• Accompagnement jury & soutenance</p>
         </div>
       </section>
-
+      <!-- About -->
+      <section id="apropos" class="hero fade" data-animate>
+        <div class="container">
+          <h2>Le studio</h2>
+          <p>Installé à Rennes, Diane Breton réunit des compétences hybrides – design, rédaction, architecture – pour offrir une lecture transversale de la ville et des usages. Notre méthode associe créativité, rigueur règlementaire et narration pour transformer les contraintes urbaines en atouts différenciants.</p>
+        </div>
+      </section>
       <!-- Contact -->
       <section id="contact" class="projects" style="padding-top:3rem;">
         <div class="container fade" data-animate>
           <h2>Contact</h2>
-          <p>Parlons de votre&nbsp;projet&nbsp;! <a href="mailto:hello@vouseesici-demo.com" style="color:var(--accent); text-decoration:none;">hello@vouseesici-demo.com</a></p>
+          <p>Discutons de votre prochain concours&nbsp;! <a href="mailto:contact@dianebreton.com" style="color:var(--accent); text-decoration:none;">contact@dianebreton.com</a></p>
         </div>
       </section>
     </main>
-
     <footer>
-      © <span id="year"></span> Vous êtes ici — Démo&nbsp;•&nbsp;Fait avec ❤️
+      © <span id="year"></span> Diane Breton • Communication & Concours
     </footer>
-
     <script>
-      // Year
+      // Year dynamic
       document.getElementById("year").textContent = new Date().getFullYear();
-
       // Intersection Observer animations
       document.addEventListener("DOMContentLoaded", () => {
         const observer = new IntersectionObserver(
@@ -293,11 +271,8 @@
               }
             });
           },
-          {
-            threshold: 0.15,
-          }
+          { threshold: 0.15 }
         );
-
         document.querySelectorAll("[data-animate]").forEach((el) => observer.observe(el));
       });
     </script>
