--- a/index.html
+++ b/index.html
@@ -3,277 +3,153 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Diane Breton – Communication & Concours</title>
-    <!-- Google Fonts -->
+    <title>Diane Breton – Communication & Concours</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
-    <meta name="description" content="Studio Diane Breton : communication, identité visuelle et réponses à concours pour l’immobilier et la ville durable." />
+    <meta name="description" content="Studio Diane Breton : communication, identité visuelle et réponses à concours pour l’immobilier et la ville durable." />
     <style>
-      :root {
-        --bg: #ffffff;
-        --text: #111111;
-        --accent: #e34d3a; /* rouge vermillon Diane Breton */
-        --muted: #6c6c6c;
+      :root{
+        /* Palette "terre-cuite" & vert sapin */
+        --bg:#ffffff;
+        --text:#0d4638;          /* vert sapin */
+        --accent:#d95c41;        /* terre cuite */
+        --muted:#6c6c6c;
       }
+      *,*::before,*::after{box-sizing:border-box;}
+      body{margin:0;font-family:"Inter",sans-serif;background:var(--bg);color:var(--text);line-height:1.5;}
 
-      *, *::before, *::after {
-        box-sizing: border-box;
-      }
+      /* ---------- NAVIGATION ---------- */
+      header{position:sticky;top:0;width:100%;background:var(--bg);z-index:1000;border-bottom:1px solid rgba(0,0,0,.05);overflow:hidden;}
+      .container{max-width:1200px;padding:0 1.5rem;margin:0 auto;}
+      .nav{display:flex;align-items:center;justify-content:space-between;height:96px;}
+      .logo{font-weight:800;font-size:1.5rem;text-transform:lowercase;letter-spacing:-.5px;}
+      .menu{display:flex;gap:2.5rem;list-style:none;margin:0;padding:0;}
+      .menu a{position:relative;text-decoration:none;color:var(--text);font-weight:700;font-size:1.3rem;padding-bottom:18px;transition:color .25s ease;}
+      .menu a:hover{color:var(--accent);} /* lien en terre-cuite au survol */
 
-      body {
-        margin: 0;
-        font-family: "Inter", sans-serif;
-        background: var(--bg);
-        color: var(--text);
-        line-height: 1.5;
+      /* ---------- SOUS-LIGNAGE SKYLINE COLORE ---------- */
+      .menu a::after{
+        content:"";position:absolute;left:0;bottom:0;width:0;height:16px;
+        background-color:var(--accent);   /* couleur remplissage */
+        -webkit-mask:url("assets/skyline.png") repeat-x bottom / auto 100%;
+                mask:url("assets/skyline.png") repeat-x bottom / auto 100%;
+        overflow:hidden;transition:width .4s ease;will-change:width,background-position;
       }
-      /* ---------- LAYOUT ---------- */
-      header {
-        position: sticky;
-        top: 0;
-        width: 100%;
-        background: var(--bg);
-        z-index: 1000;
-        border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+      .menu a:hover::after{
+        width:100%;animation:skyline-slide 6s linear infinite; /* + rapide */
       }
-      .container {
-        max-width: 1200px;
-        padding: 0 1.5rem;
-        margin: 0 auto;
-      }
-      .nav {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        height: 64px;
-      }
-      .logo {
-        font-weight: 800;
-        font-size: 1.25rem;
-        text-transform: lowercase;
-        letter-spacing: -0.5px;
-      }
-      .menu {
-        display: flex;
-        gap: 1.25rem;
-        list-style: none;
-        margin: 0;
-        padding: 0;
-      }
-      .menu a {
-        text-decoration: none;
-        color: var(--text);
-        font-weight: 500;
-        position: relative;
-      }
-      .menu a::after {
-        content: "";
-        position: absolute;
-        bottom: -4px;
-        left: 0;
-        height: 2px;
-        width: 0;
-        background: var(--accent);
-        transition: width 0.3s ease;
-      }
-      .menu a:hover::after {
-        width: 100%;
-      }
+      @keyframes skyline-slide{from{background-position:0 100%;}to{background-position:-400px 100%;}}
+
       /* ---------- HERO ---------- */
-      .hero {
-        min-height: 88vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        padding: 3rem 0;
-        background: var(--bg);
-      }
-      .hero h1 {
-        font-size: clamp(2.5rem, 5vw + 1rem, 4.75rem);
-        font-weight: 800;
-        margin: 0;
-        letter-spacing: -1px;
-      }
-      .hero p {
-        margin-top: 1rem;
-        font-size: 1.125rem;
-        max-width: 45ch;
-        margin-inline: auto;
-        color: var(--muted);
-      }
+      .hero{padding-top:2rem;min-height:88vh;display:flex;align-items:center;justify-content:center;text-align:center;padding-bottom:3rem;background:var(--bg);}
+      .hero h1{font-size:3.5rem;font-weight:800;margin:0;letter-spacing:-1px;color:var(--text);}  
+      .hero h1 span{color:var(--accent);}  
+      .hero p{margin-top:1.6rem;font-size:2.25rem;max-width:48ch;margin-inline:auto;color:var(--muted);} 
+
       /* ---------- PROJECTS GRID ---------- */
-      .projects {
-        padding: 5rem 0 6rem;
-        background: var(--bg);
-      }
-      .projects h2 {
-        font-size: 2rem;
-        margin-bottom: 2.5rem;
-        text-align: center;
-      }
-      .grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-        gap: 2rem;
-      }
-      .card {
-        position: relative;
-        overflow: hidden;
-        border-radius: 0.75rem;
-        aspect-ratio: 4/3;
-        background: #f1f1f1;
-        cursor: pointer;
-        transition: transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
-      }
-      .card img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        display: block;
-      }
-      .card .overlay {
-        position: absolute;
-        inset: 0;
-        background: rgba(0, 0, 0, 0.55);
-        display: flex;
-        align-items: flex-end;
-        padding: 1rem;
-        color: #fff;
-        opacity: 0;
-        transition: opacity 0.3s ease;
-      }
-      .card:hover .overlay {
-        opacity: 1;
-      }
-      .card:hover {
-        transform: translateY(-6px);
-      }
+      .projects{padding:5rem 0 6rem;background:var(--bg);}
+      .projects h2{font-size:2.1rem;margin-bottom:2.5rem;text-align:center;color:var(--text);}  
+      .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(280px,1fr));gap:2rem;}
+      .card{position:relative;overflow:hidden;border-radius:.75rem;aspect-ratio:4/3;background:#f1f1f1;cursor:pointer;transition:transform .4s cubic-bezier(.19,1,.22,1);}  
+      .card img{width:100%;height:100%;object-fit:cover;display:block;}
+      .card .overlay{position:absolute;inset:0;background:rgba(0,0,0,.55);display:flex;align-items:flex-end;padding:1rem;color:#fff;opacity:0;transition:opacity .3s ease;}
+      .card:hover .overlay{opacity:1;}
+      .card:hover{transform:translateY(-6px);}  
+
       /* ---------- FOOTER ---------- */
-      footer {
-        padding: 2.5rem 0;
-        text-align: center;
-        background: var(--bg);
-        font-size: 0.875rem;
-        color: var(--muted);
-      }
-      /* ---------- ANIMATIONS ---------- */
-      .fade {
-        opacity: 0;
-        transform: translateY(30px);
-        transition: opacity 0.75s ease-out, transform 0.75s ease-out;
-      }
-      .fade.show {
-        opacity: 1;
-        transform: translateY(0);
-      }
+      footer{padding:2.5rem 0;text-align:center;background:var(--bg);font-size:.875rem;color:var(--muted);}  
+
+      /* ---------- ANIMATIONS ON SCROLL ---------- */
+      .fade{opacity:0;transform:translateY(30px);transition:opacity .75s ease-out,transform .75s ease-out;}
+      .fade.show{opacity:1;transform:translateY(0);}  
+
       /* ---------- RESPONSIVE ---------- */
-      @media (max-width: 640px) {
-        .menu {
-          display: none;
-        }
-      }
+      @media(max-width:640px){.menu{display:none;}
+        .hero h1{font-size:clamp(2.2rem,8vw+1rem,4rem);} /* adapt mobile */}
     </style>
   </head>
   <body>
     <header>
       <div class="container nav">
-        <div class="logo">diane&nbsp;breton</div>
+        <div class="logo">Diane&nbsp;Breton</div>
         <ul class="menu">
-          <li><a href="#projets">projets</a></li>
-          <li><a href="#services">services</a></li>
-          <li><a href="#apropos">studio</a></li>
-          <li><a href="#contact">contact</a></li>
+          <li><a href="#projets">Projets</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#apropos">Studio</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
     </header>
+
     <main>
       <!-- Hero -->
       <section class="hero fade" data-animate>
         <div class="container">
-          <h1>Communication <span style="color:var(--accent);">+</span> concours<br> pour bâtir la ville de demain.</h1>
-          <p>Le studio Diane Breton accompagne promoteurs, architectes et acteurs publics dans leurs projets urbains : identité, stratégie éditoriale et réponses à concours immobiliers.</p>
+          <h1>Communication <span>+</span> concours<br>pour bâtir la ville de demain.</h1>
+          <p>Le studio Diane Breton accompagne promoteurs, architectes et acteurs publics dans leurs projets urbains : identité, stratégie éditoriale et réponses à concours immobiliers.</p>
         </div>
       </section>
+
       <!-- Projects -->
       <section id="projets" class="projects">
         <div class="container">
           <h2 class="fade" data-animate>Dernières réalisations</h2>
           <div class="grid">
-            <!-- Card 1 -->
             <article class="card fade" data-animate>
               <img src="https://source.unsplash.com/random/640x480?architecture,urban" alt="Concours ZAC Belleville" />
-              <div class="overlay">
-                <h3>ZAC Belleville – Offre lauréate</h3>
-              </div>
+              <div class="overlay"><h3>ZAC Belleville – Offre lauréate</h3></div>
             </article>
-            <!-- Card 2 -->
             <article class="card fade" data-animate>
               <img src="https://source.unsplash.com/random/640x480?architecture,modern" alt="Plaquette Siège Groupe Alta" />
-              <div class="overlay">
-                <h3>Alta Group – Plaquette siège social</h3>
-              </div>
+              <div class="overlay"><h3>Alta Group – Plaquette siège social</h3></div>
             </article>
-            <!-- Card 3 -->
             <article class="card fade" data-animate>
               <img src="https://source.unsplash.com/random/640x480?city,night" alt="Identité Quartier Aster" />
-              <div class="overlay">
-                <h3>Quartier Aster – Branding urbain</h3>
-              </div>
+              <div class="overlay"><h3>Quartier Aster – Branding urbain</h3></div>
             </article>
-            <!-- Card 4 -->
             <article class="card fade" data-animate>
               <img src="https://source.unsplash.com/random/640x480?building,future" alt="Concours MixCité" />
-              <div class="overlay">
-                <h3>MixCité 2024 – Dossier de consultation</h3>
-              </div>
+              <div class="overlay"><h3>MixCité 2024 – Dossier de consultation</h3></div>
             </article>
           </div>
         </div>
       </section>
+
       <!-- Services -->
-      <section id="services" class="hero fade" data-animate style="background:#f9f9f9;">
+      <section id="services" class="hero fade" data-animate style="background:#f5f9f7;">
         <div class="container">
           <h2>Services</h2>
-          <p>• Identité visuelle & naming<br>• Stratégie éditoriale & contenus<br>• Dossiers de consultation & mémoires techniques<br>• Design graphique print & digital<br>• Accompagnement jury & soutenance</p>
+          <p>• Identité visuelle & naming<br>• Stratégie éditoriale & contenus<br>• Dossiers de consultation & mémoires techniques<br>• Design graphique print & digital<br>• Accompagnement jury & soutenance</p>
         </div>
       </section>
+
       <!-- About -->
       <section id="apropos" class="hero fade" data-animate>
         <div class="container">
           <h2>Le studio</h2>
-          <p>Installé à Rennes, Diane Breton réunit des compétences hybrides – design, rédaction, architecture – pour offrir une lecture transversale de la ville et des usages. Notre méthode associe créativité, rigueur règlementaire et narration pour transformer les contraintes urbaines en atouts différenciants.</p>
+          <p>Installé à Rennes, Diane Breton réunit des compétences hybrides – design, rédaction, architecture, urbanisme – pour offrir une lecture transversale de la ville et des usages. Notre méthode associe créativité, rigueur réglementaire et narration pour transformer les contraintes urbaines en atouts différenciants.</p>
         </div>
       </section>
+
       <!-- Contact -->
       <section id="contact" class="projects" style="padding-top:3rem;">
         <div class="container fade" data-animate>
           <h2>Contact</h2>
-          <p>Discutons de votre prochain concours&nbsp;! <a href="mailto:contact@dianebreton.com" style="color:var(--accent); text-decoration:none;">contact@dianebreton.com</a></p>
+          <p>Discutons de votre prochain concours ! <a href="mailto:contact@dianebreton.com" style="color:var(--accent);text-decoration:none;">contact@dianebreton.com</a></p>
         </div>
       </section>
     </main>
-    <footer>
-      © <span id="year"></span> Diane Breton • Communication & Concours
-    </footer>
+
+    <footer>© <span id="year"></span> Diane Breton • Communication & Concours</footer>
+
     <script>
-      // Year dynamic
-      document.getElementById("year").textContent = new Date().getFullYear();
-      // Intersection Observer animations
-      document.addEventListener("DOMContentLoaded", () => {
-        const observer = new IntersectionObserver(
-          (entries) => {
-            entries.forEach((entry) => {
-              if (entry.isIntersecting) {
-                entry.target.classList.add("show");
-                observer.unobserve(entry.target);
-              }
-            });
-          },
-          { threshold: 0.15 }
-        );
-        document.querySelectorAll("[data-animate]").forEach((el) => observer.observe(el));
+      document.getElementById("year").textContent=new Date().getFullYear();
+      document.addEventListener("DOMContentLoaded",()=>{
+        const observer=new IntersectionObserver((entries)=>{
+          entries.forEach((e)=>{if(e.isIntersecting){e.target.classList.add("show");observer.unobserve(e.target);}});
+        },{threshold:.15});
+        document.querySelectorAll("[data-animate]").forEach((el)=>observer.observe(el));
       });
     </script>
   </body>
