--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <meta name="description" content="Studio Diane Breton : communication, identité visuelle et réponses à concours pour l’immobilier et la ville durable." />
     <style>
       :root{
-        /* Palette "terre-cuite" & vert sapin */
+        /* Palette terre‑cuite & vert sapin */
         --bg:#ffffff;
-        --text:#0d4638;          /* vert sapin */
-        --accent:#d95c41;        /* terre cuite */
+        --text:#0d4638;
+        --accent:#d95c41;
         --muted:#6c6c6c;
       }
       *,*::before,*::after{box-sizing:border-box;}
@@ -26,52 +26,33 @@
       .logo{font-weight:800;font-size:1.5rem;text-transform:lowercase;letter-spacing:-.5px;}
       .menu{display:flex;gap:2.5rem;list-style:none;margin:0;padding:0;}
       .menu a{position:relative;text-decoration:none;color:var(--text);font-weight:700;font-size:1.3rem;padding-bottom:18px;transition:color .25s ease;}
-      .menu a:hover{color:var(--accent);} /* lien en terre-cuite au survol */
-
-      /* ---------- SOUS-LIGNAGE SKYLINE COLORE ---------- */
-      .menu a::after{
-        content:"";position:absolute;left:0;bottom:0;width:0;height:16px;
-        background-color:var(--accent);   /* couleur remplissage */
-        -webkit-mask:url("assets/skyline.png") repeat-x bottom / auto 100%;
-                mask:url("assets/skyline.png") repeat-x bottom / auto 100%;
-        overflow:hidden;transition:width .4s ease;will-change:width,background-position;
-      }
-      .menu a:hover::after{
-        width:100%;animation:skyline-slide 6s linear infinite; /* + rapide */
-      }
-      @keyframes skyline-slide{from{background-position:0 100%;}to{background-position:-400px 100%;}}
+      .menu a:hover{color:var(--accent);}  
+      .menu a::after{content:"";position:absolute;left:0;bottom:0;width:0;height:16px;background:url("assets/skyline.png") repeat-x bottom;background-size:auto 100%;background-color:var(--accent);-webkit-mask:url("assets/skyline.png") repeat-x bottom/auto 100%;mask:url("assets/skyline.png") repeat-x bottom/auto 100%;transition:width .4s ease;will-change:width,-webkit-mask-position,mask-position;-webkit-mask-position:0 100%;mask-position:0 100%;}
+      .menu a:hover::after{width:100%;animation:skyline-slide 6s linear infinite;}
+      @keyframes skyline-slide{from{-webkit-mask-position:0 100%;mask-position:0 100%;}to{-webkit-mask-position:-400px 100%;mask-position:-400px 100%;}}
 
       /* ---------- HERO ---------- */
       .hero{padding-top:2rem;min-height:88vh;display:flex;align-items:center;justify-content:center;text-align:center;padding-bottom:3rem;background:var(--bg);}
-      .hero h1{font-size:3.5rem;font-weight:800;margin:0;letter-spacing:-1px;color:var(--text);}  
+      .hero h1{font-size:3.3rem;font-weight:800;margin:0;letter-spacing:-1px;color:var(--text);}  
       .hero h1 span{color:var(--accent);}  
-      .hero p{margin-top:1.6rem;font-size:2.25rem;max-width:48ch;margin-inline:auto;color:var(--muted);} 
+      .hero p{margin-top:1.6rem;font-size:2.15rem;max-width:48ch;margin-inline:auto;color:var(--muted);} 
 
       /* ---------- PROJECTS GRID ---------- */
-      .projects{padding:5rem 0 6rem;background:var(--bg);}
-      .projects h2{font-size:2.1rem;margin-bottom:2.5rem;text-align:center;color:var(--text);}  
-      .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(280px,1fr));gap:2rem;}
-      .card{position:relative;overflow:hidden;border-radius:.75rem;aspect-ratio:4/3;background:#f1f1f1;cursor:pointer;transition:transform .4s cubic-bezier(.19,1,.22,1);}  
-      .card img{width:100%;height:100%;object-fit:cover;display:block;}
-      .card .overlay{position:absolute;inset:0;background:rgba(0,0,0,.55);display:flex;align-items:flex-end;padding:1rem;color:#fff;opacity:0;transition:opacity .3s ease;}
-      .card:hover .overlay{opacity:1;}
-      .card:hover{transform:translateY(-6px);}  
+      .projects{padding:5rem 0 6rem;background:var(--bg);} .projects h2{font-size:2.1rem;margin-bottom:2.5rem;text-align:center;color:var(--text);}  .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(280px,1fr));gap:2rem;} .card{position:relative;overflow:hidden;border-radius:.75rem;aspect-ratio:4/3;background:#f1f1f1;cursor:pointer;transition:transform .4s cubic-bezier(.19,1,.22,1);}  .card img{width:100%;height:100%;object-fit:cover;display:block;} .card .overlay{position:absolute;inset:0;background:rgba(0,0,0,.55);display:flex;align-items:flex-end;padding:1rem;color:#fff;opacity:0;transition:opacity .3s ease;} .card:hover .overlay{opacity:1;} .card:hover{transform:translateY(-6px);}  
 
       /* ---------- FOOTER ---------- */
       footer{padding:2.5rem 0;text-align:center;background:var(--bg);font-size:.875rem;color:var(--muted);}  
 
-      /* ---------- ANIMATIONS ON SCROLL ---------- */
-      .fade{opacity:0;transform:translateY(30px);transition:opacity .75s ease-out,transform .75s ease-out;}
-      .fade.show{opacity:1;transform:translateY(0);}  
+      /* ---------- ANIMATIONS ---------- */
+      .fade{opacity:0;transform:translateY(30px);transition:opacity .75s ease-out,transform .75s ease-out;} .fade.show{opacity:1;transform:translateY(0);}  
 
       /* ---------- RESPONSIVE ---------- */
       @media(max-width:640px){
         .menu{display:none;}
         /* Hero typographie mobile */
-        .hero h1{font-size:clamp(1.9rem,6vw+0.3rem,3rem);} /* plus petit */
-        .hero p{font-size:1.125rem;}
+        .hero h1{font-size:clamp(1.6rem,6vw+0.3rem,3rem);} /* plus petit */
+        .hero p{font-size:1.025rem;}
       }
-        /* Removed duplicate .hero h1 rule */
     </style>
   </head>
   <body>
