reduce mobiule size

--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
       .fade.show{opacity:1;transform:translateY(0);}  
 
       /* ---------- RESPONSIVE ---------- */
-      @media(max-width:640px){
+      @media(max-width:620px){
         .menu{display:none;}
         /* Hero typographie mobile */
-        .hero h1{font-size:clamp(1.0rem,6vw+0.3rem,3rem);} /* plus petit */
+        .hero h1{font-size:1.5rem} /* plus petit */
         .hero p{font-size:1.025rem;}
       }
         /* Removed duplicate .hero h1 rule */
