--- a/index.html
+++ b/index.html
@@ -8,72 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
     <meta name="description" content="Studio Diane Breton : communication, identité visuelle et réponses à concours pour l’immobilier et la ville durable." />
-    <style>
-      :root{
-        /* Palette "terre-cuite" & vert sapin */
-        --bg:#ffffff;
-        --text:#0d4638;          /* vert sapin */
-        --accent:#d95c41;        /* terre cuite */
-        --muted:#6c6c6c;
-      }
-      *,*::before,*::after{box-sizing:border-box;}
-      body{margin:0;font-family:"Inter",sans-serif;background:var(--bg);color:var(--text);line-height:1.5;}
-
-      /* ---------- NAVIGATION ---------- */
-      header{position:sticky;top:0;width:100%;background:var(--bg);z-index:1000;border-bottom:1px solid rgba(0,0,0,.05);overflow:hidden;}
-      .container{max-width:1200px;padding:0 1.5rem;margin:0 auto;}
-      .nav{display:flex;align-items:center;justify-content:space-between;height:96px;}
-      .logo{font-weight:800;font-size:1.5rem;text-transform:lowercase;letter-spacing:-.5px;}
-      .menu{display:flex;gap:2.5rem;list-style:none;margin:0;padding:0;}
-      .menu a{position:relative;text-decoration:none;color:var(--text);font-weight:700;font-size:1.3rem;padding-bottom:18px;transition:color .25s ease;}
-      .menu a:hover{color:var(--accent);} /* lien en terre-cuite au survol */
-
-      /* ---------- SOUS-LIGNAGE SKYLINE COLORE ---------- */
-      .menu a::after{
-        content:"";position:absolute;left:0;bottom:0;width:0;height:16px;
-        background-color:var(--accent);   /* couleur remplissage */
-        -webkit-mask:url("assets/skyline.png") repeat-x bottom / auto 100%;
-                mask:url("assets/skyline.png") repeat-x bottom / auto 100%;
-        overflow:hidden;transition:width .4s ease;will-change:width,background-position;
-      }
-      .menu a:hover::after{
-        width:100%;animation:skyline-slide 6s linear infinite; /* + rapide */
-      }
-      @keyframes skyline-slide{from{background-position:0 100%;}to{background-position:-400px 100%;}}
-
-      /* ---------- HERO ---------- */
-      .hero{position:relative;padding-top:2rem;min-height:88vh;display:flex;align-items:center;justify-content:center;text-align:center;padding-bottom:3rem;}
-      .hero::before{content:"";position:absolute;inset:0;z-index:-1;background:url("assets/ville_arrosée.png") center/cover no-repeat;background-attachment:fixed;opacity:0.25;}
-      .hero h1{font-size:3.3rem;font-weight:800;margin:0;letter-spacing:-1px;color:var(--text);}  
-      .hero h1 span{color:var(--accent);}  
-      .hero p{margin-top:1.6rem;font-size:2.15rem;max-width:48ch;margin-inline:auto;color:var(--muted);} 
-
-      /* ---------- PROJECTS GRID ---------- */
-      .projects{padding:5rem 0 6rem;background:var(--bg);}
-      .projects h2{font-size:2.1rem;margin-bottom:2.5rem;text-align:center;color:var(--text);}  
-      .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(280px,1fr));gap:2rem;}
-      .card{position:relative;overflow:hidden;border-radius:.75rem;aspect-ratio:4/3;background:#f1f1f1;cursor:pointer;transition:transform .4s cubic-bezier(.19,1,.22,1);}  
-      .card img{width:100%;height:100%;object-fit:cover;display:block;}
-      .card .overlay{position:absolute;inset:0;background:rgba(0,0,0,.55);display:flex;align-items:flex-end;padding:1rem;color:#fff;opacity:0;transition:opacity .3s ease;}
-      .card:hover .overlay{opacity:1;}
-      .card:hover{transform:translateY(-6px);}  
-
-      /* ---------- FOOTER ---------- */
-      footer{padding:2.5rem 0;text-align:center;background:var(--bg);font-size:.875rem;color:var(--muted);}  
-
-      /* ---------- ANIMATIONS ON SCROLL ---------- */
-      .fade{opacity:0;transform:translateY(30px);transition:opacity .75s ease-out,transform .75s ease-out;}
-      .fade.show{opacity:1;transform:translateY(0);}  
-
-      /* ---------- RESPONSIVE ---------- */
-      @media(max-width:620px){
-        .menu{display:none;}
-        /* Hero typographie mobile */
-        .hero h1{font-size:1.5rem} /* plus petit */
-        .hero p{font-size:1.025rem;}
-      }
-        /* Removed duplicate .hero h1 rule */
-    </style>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
@@ -102,10 +37,10 @@
         <div class="container">
           <h2 class="fade" data-animate>Dernières réalisations</h2>
           <div class="grid">
-            <article class="card fade" data-animate>
+            <a href="projet.html" class="card fade" data-animate>
               <img src="assets/esquisse_1.png" alt="Concours ZAC Belleville" />
               <div class="overlay"><h3>ZAC Belleville – Offre lauréate</h3></div>
-            </article>
+            </a>
             <article class="card fade" data-animate>
               <img src="assets/chateau.png" alt="Plaquette Siège Groupe Alta" />
               <div class="overlay"><h3>Alta Group – Plaquette siège social</h3></div>
