improves services part

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
     <meta name="description" content="Studio Diane Breton : communication, identité visuelle et réponses à concours pour l’immobilier et la ville durable." />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <header>
       <div class="container nav">
-        <div class="logo">Diane&nbsp;Breton</div>
+        <div class="logo">diane&nbsp;breton</div>
         <ul class="menu">
           <li><a href="#projets">Projets</a></li>
           <li><a href="#services">Services</a></li>
@@ -37,7 +37,7 @@
         <div class="container">
           <h2 class="fade" data-animate>Dernières réalisations</h2>
           <div class="grid">
-            <a href="projet.html" class="card fade" data-animate>
+            <a href="projets/projet.html" class="card fade" data-animate>
               <img src="assets/esquisse_1.png" alt="Concours ZAC Belleville" />
               <div class="overlay"><h3>ZAC Belleville – Offre lauréate</h3></div>
             </a>
@@ -61,12 +61,59 @@
       </section>
 
       <!-- Services -->
-      <section id="services" class="hero fade" data-animate style="background:#f5f9f7;">
+      <section id="services" class="services fade" data-animate>
         <div class="container">
-          <h2>Services</h2>
-          <p>• Identité visuelle & naming<br>• Stratégie éditoriale & contenus<br>• Dossiers de consultation & mémoires techniques<br>• Design graphique print & digital<br>• Accompagnement jury & soutenance</p>
+          <h2>Nos pôles d’expertise</h2>
+
+          <div class="poles">
+            <!-- Promoteurs -->
+            <div class="pole">
+              <h3>Promoteurs immobiliers</h3>
+              <ul>
+                <li>Mémoires techniques &amp; offres concours</li>
+                <li>Branding d’opérations (naming, identité)</li>
+                <li>Dossiers investisseurs &amp; fundraising</li>
+                <li>Supports de ventes (plaquettes, plans 3D)</li>
+              </ul>
+              <!-- bouton -->
+              <p class="btn-wrapper">
+                <a href="poles/promoteurs.html" class="btn">En savoir&nbsp;plus</a>
+              </p>
+            </div>
+
+            <!-- Collectivités -->
+            <div class="pole">
+              <h3>Collectivités &amp; aménageurs</h3>
+              <ul>
+                <li>Concertation citoyenne (kits, affiches)</li>
+                <li>Rapports et bilans de mandat</li>
+                <li>Signalétique &amp; cartographies</li>
+                <li>Accompagnement jury / soutenance</li>
+              </ul>
+              <!-- bouton -->
+              <p class="btn-wrapper">
+                <a href="poles/pole-promoteurs.html" class="btn">En savoir&nbsp;plus</a>
+              </p>
+            </div>
+
+            <!-- Design graphique -->
+            <div class="pole">
+              <h3>Design graphique &amp; print</h3>
+              <ul>
+                <li>Affiches, flyers et campagnes 4×3</li>
+                <li>Brochures institutionnelles</li>
+                <li>Templates PPT &amp; rapports PDF</li>
+                <li>Infographies et illustrations sur mesure</li>
+              </ul>
+              <!-- bouton -->
+              <p class="btn-wrapper">
+                <a href="poles/pole-promoteurs.html" class="btn">En savoir&nbsp;plus</a>
+              </p>
+            </div>
+          </div>
         </div>
       </section>
+
 
       <!-- About -->
       <section id="apropos" class="hero fade" data-animate>
