--- a/projets/projet.html
+++ b/projets/projet.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ZAC Belleville – Diane Breton</title>
     <!-- Même feuille de style que index.html -->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../styles.css" />
   </head>
   <body>
     <header>
       <div class="container nav">
-        <a class="logo" href="index.html">Diane&nbsp;Breton</a>
+        <a class="logo" href="../index.html">Diane&nbsp;Breton</a>
         <ul class="menu">
-          <li><a href="index.html#projets">Projets</a></li>
-          <li><a href="index.html#services">Services</a></li>
-          <li><a href="index.html#apropos">Studio</a></li>
-          <li><a href="index.html#contact">Contact</a></li>
+          <li><a href="../index.html#projets">Projets</a></li>
+          <li><a href="../index.html#services">Services</a></li>
+          <li><a href="../index.html#apropos">Studio</a></li>
+          <li><a href="../index.html#contact">Contact</a></li>
         </ul>
       </div>
     </header>
@@ -45,13 +45,13 @@
 
         <h2>Galerie</h2>
         <div class="grid" style="margin-top:2rem;">
-          <img src="assets/ville_urba.png" alt="Vue aérienne" class="card" />
-          <img src="assets/ville_arrosée.png" alt="Perspective végétale" class="card" />
-          <img src="assets/reunion.jpg" alt="Atelier" class="card" />
+          <img src="../assets/ville_urba.png" alt="Vue aérienne" class="card" />
+          <img src="../assets/ville_arrosée.png" alt="Perspective végétale" class="card" />
+          <img src="../assets/reunion.jpg" alt="Atelier" class="card" />
         </div>
 
         <div style="margin-top:3rem;text-align:center;">
-          <a href="assets/ZAC_Belleville_Memoire.pdf" style="background:#fff;color:var(--accent);padding:0.75rem 1.5rem;border-radius:9999px;font-weight:600;text-decoration:none;">Télécharger le mémoire (PDF)</a>
+          <a href="../assets/ZAC_Belleville_Memoire.pdf" style="background:#fff;color:var(--accent);padding:0.75rem 1.5rem;border-radius:9999px;font-weight:600;text-decoration:none;">Télécharger le mémoire (PDF)</a>
         </div>
       </div>
     </section>
