--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <ul class="menu">
           <li><a href="#projets">Projets</a></li>
           <li><a href="#services">Services</a></li>
+          <li><a href="#etonnements">Étonnements</a></li>
           <li><a href="#apropos">Studio</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -113,6 +114,33 @@
           </div>
         </div>
       </section>
+
+    <!-- Étonnements -->
+    <section id="etonnements" class="etonnements fade" data-animate>
+      <div class="container">
+        <h2>Étonnements & mini-articles</h2>
+
+        <div class="etonnements-grid">
+          <!-- Article 1 -->
+          <a href="etonnements/beton-biosource/" class="eton-card">
+            <h3>Le béton biosourcé : gadget ou révolution ?</h3>
+            <p>Premiers retours de chantier sur un matériau qui change la donne…</p>
+          </a>
+
+          <!-- Article 2 -->
+          <a href="etonnements/tiers-lieux/" class="eton-card">
+            <h3>Tiers-lieux : le mot est-il déjà has-been ?</h3>
+            <p>Entre inflation lexicale et véritables usages hybrides, on fait le tri.</p>
+          </a>
+
+          <!-- Article 3 -->
+          <a href="etonnements/recup-façades/" class="eton-card">
+            <h3>Ré-emploi de façades : Lyon montre la voie</h3>
+            <p>Visite d’une opération qui réutilise 85 % des briques sur site.</p>
+          </a>
+        </div>
+      </div>
+    </section>
 
 
       <!-- About -->
