--- a/poles/promoteurs.html
+++ b/poles/promoteurs.html
@@ -17,6 +17,7 @@
         <ul class="menu">
           <li><a href="../index.html#projets">Projets</a></li>
           <li><a href="../index.html#services">Services</a></li>
+          <li><a href="../index.html#etonnements">Étonnements</a></li>
           <li><a href="../index.html#apropos">Studio</a></li>
           <li><a href="../index.html#contact">Contact</a></li>
         </ul>
