clean html path

--- a/etonnements/beton-biosource/index.html
+++ b/etonnements/beton-biosource/index.html
@@ -13,7 +13,7 @@
     <!-- HEADER commun -->
     <header>
       <div class="container nav">
-        <a class="logo" href="../../index.html">Diane&nbsp;Breton</a>
+        <a class="logo" href="../../index.html">diane&nbsp;breton</a>
         <ul class="menu">
           <li><a href="../../index.html#projets">Projets</a></li>
           <li><a href="../../index.html#services">Services</a></li>
