--- a/poles/promoteurs/index.html
+++ b/poles/promoteurs/index.html
@@ -7,19 +7,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../../styles.css">
   </head>
   <body>
     <!-- HEADER commun -->
     <header>
       <div class="container nav">
-        <a class="logo" href="../index.html">diane&nbsp;breton</a>
+        <a class="logo" href="../../index.html">diane&nbsp;breton</a>
         <ul class="menu">
-          <li><a href="../index.html#projets">Projets</a></li>
-          <li><a href="../index.html#services">Services</a></li>
-          <li><a href="../index.html#etonnements">Étonnements</a></li>
-          <li><a href="../index.html#apropos">Studio</a></li>
-          <li><a href="../index.html#contact">Contact</a></li>
+          <li><a href="../../index.html#projets">Projets</a></li>
+          <li><a href="../../index.html#services">Services</a></li>
+          <li><a href="../../index.html#etonnements">Étonnements</a></li>
+          <li><a href="../../index.html#apropos">Studio</a></li>
+          <li><a href="../../index.html#contact">Contact</a></li>
         </ul>
       </div>
     </header>
@@ -66,11 +66,11 @@
         <h2 style="margin-top:3.5rem;">Études de cas</h2>
         <div class="grid" style="margin-top:2rem;">
           <a href="projet-belleville.html" class="card">
-            <img src="../assets/esquisse_1.png" alt="ZAC Belleville" />
+            <img src="../../assets/esquisse_1.png" alt="ZAC Belleville" />
             <div class="overlay"><h3>ZAC Belleville</h3></div>
           </a>
           <a href="projet-batiharmony.html" class="card">
-            <img src="../assets/ville_bleu.png" alt="BatiHarmony" />
+            <img src="../../assets/ville_bleu.png" alt="BatiHarmony" />
             <div class="overlay"><h3>BatiHarmony</h3></div>
           </a>
         </div>
@@ -83,7 +83,7 @@
 
     <footer>
       © <span id="year"></span> Diane Breton • Communication &amp; Concours &nbsp;•&nbsp;
-      <a href="../index.html#services" style="color:var(--text);text-decoration:none;">← Retour aux services</a>
+      <a href="../../index.html#services" style="color:var(--text);text-decoration:none;">← Retour aux services</a>
     </footer>
 
     <script>
