--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               </ul>
               <!-- bouton -->
               <p class="btn-wrapper">
-                <a href="poles/promoteurs.html" class="btn">En savoir&nbsp;plus</a>
+                <a href="poles/promoteurs/" class="btn">En savoir&nbsp;plus</a>
               </p>
             </div>
 
@@ -108,7 +108,7 @@
               </ul>
               <!-- bouton -->
               <p class="btn-wrapper">
-                <a href="poles/pole-promoteurs.html" class="btn">En savoir&nbsp;plus</a>
+                <a href="poles/promoteurs/" class="btn">En savoir&nbsp;plus</a>
               </p>
             </div>
           </div>
