--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="container">
           <h2 class="fade" data-animate>Dernières réalisations</h2>
           <div class="grid">
-            <a href="projets/projet.html" class="card fade" data-animate>
+            <a href="projets/projet1/" class="card fade" data-animate>
               <img src="assets/esquisse_1.png" alt="Concours ZAC Belleville" />
               <div class="overlay"><h3>ZAC Belleville – Offre lauréate</h3></div>
             </a>
