--- a/projets/projet1/index.html
+++ b/projets/projet1/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div class="container nav">
-        <a class="logo" href="../index.html">Diane&nbsp;Breton</a>
+        <a class="logo" href="../../index.html">Diane&nbsp;Breton</a>
         <ul class="menu">
           <li><a href="../../index.html#projets">Projets</a></li>
           <li><a href="../../index.html#services">Services</a></li>
@@ -22,7 +22,7 @@
     </header>
 
     <!-- HERO du projet -->
-    <section class="hero" style="min-height:60vh; background:url('assets/esquisse_1.png') center/cover no-repeat;">
+    <section class="hero" style=" min-height:60vh; background:url('assets/esquisse_1.png') center/cover no-repeat;">
       <div class="container" style="background:rgba(255,255,255,0.75);padding:2rem 1.5rem;border-radius:0.75rem;max-width:720px;">
         <h1>ZAC Belleville – Offre lauréate</h1>
         <p>Concours d'aménagement urbain · Paris&nbsp;20ᵉ · 2025</p>
