--- a/index.html
+++ b/index.html
@@ -143,21 +143,36 @@
     </section>
 
 
-      <!-- About -->
-      <section id="apropos" class="hero fade" data-animate>
-        <div class="container">
-          <h2>Le studio</h2>
-          <p>Installé à Rennes, Diane Breton réunit des compétences hybrides – design, rédaction, architecture, urbanisme – pour offrir une lecture transversale de la ville et des usages. Notre méthode associe créativité, rigueur réglementaire et narration pour transformer les contraintes urbaines en atouts différenciants.</p>
-        </div>
-      </section>
+  <!-- About -->
+  <section id="apropos" class="hero fade" data-animate>
+    <div class="container">
+      <h2>Le studio</h2>
+      <p>Installé à Rennes, Diane Breton réunit des compétences hybrides – design, rédaction, architecture, urbanisme – pour offrir une lecture transversale de la ville et des usages. Notre méthode associe créativité, rigueur réglementaire et narration pour transformer les contraintes urbaines en atouts différenciants.</p>
+      <div class="linkedin-center">
+        <a href="https://www.linkedin.com/in/diane-breton-049884127/" target="_blank" rel="noopener" class="linkedin-icon">
+          <img src="assets/linkedin-terre.svg" alt="LinkedIn" />
+        </a>
+      </div>
+    </div>
+  </section>
 
-      <!-- Contact -->
-      <section id="contact" class="projects" style="padding-top:3rem;">
-        <div class="container fade" data-animate>
-          <h2>Contact</h2>
-          <p>Discutons de votre prochain concours ! <a href="mailto:contact@dianebreton.com" style="color:var(--accent);text-decoration:none;">contact@dianebreton.com</a></p>
-        </div>
-      </section>
+  <!-- Contact -->
+  <section id="contact" class="projects" style="padding-top:3rem;">
+    <div class="container fade" data-animate>
+      <h2>Contact</h2>
+      <p>
+        Discutons de votre prochain concours ! 
+        <a href="mailto:contact@dianebreton.com" style="color:var(--accent);text-decoration:none;">
+          contact@dianebreton.com
+        </a>
+      </p>
+      <div class="linkedin-center" style="margin-top:2.2rem;">
+        <a href="https://www.linkedin.com/in/diane-breton-049884127/" target="_blank" rel="noopener" class="linkedin-icon">
+          <img src="assets/linkedin-sapin.svg" alt="LinkedIn" />
+        </a>
+      </div>
+    </div>
+  </section>
     </main>
 
     <footer>© <span id="year"></span> Diane Breton • Communication & Concours</footer>
