--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <header>
       <div class="container nav">
         <div class="logo">diane&nbsp;breton</div>
+        <button class="nav-toggle" aria-label="Ouvrir le menu">
+          <span></span><span></span><span></span>
+        </button>
         <ul class="menu">
           <li><a href="#projets">Projets</a></li>
           <li><a href="#services">Services</a></li>
@@ -185,6 +188,21 @@
         },{threshold:.15});
         document.querySelectorAll("[data-animate]").forEach((el)=>observer.observe(el));
       });
+    </script>
+    <script>
+      const navToggle = document.querySelector('.nav-toggle');
+      const navMenu = document.querySelector('.menu');
+      navToggle.addEventListener('click', () => {
+        navMenu.classList.toggle('open');
+        navToggle.classList.toggle('active');
+      });
+      // Ferme le menu quand on clique sur un lien (UX++)
+      navMenu.querySelectorAll('a').forEach(link =>
+        link.addEventListener('click', ()=> {
+          navMenu.classList.remove('open');
+          navToggle.classList.remove('active');
+        })
+      );
     </script>
   </body>
 </html>
