fix projet header

--- a/projets/projet1/index.html
+++ b/projets/projet1/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ZAC Belleville – Diane Breton</title>
-    <!-- Même feuille de style que index.html -->
-    <link rel="stylesheet" href="../../styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../../styles.css">
   </head>
   <body>
+    <!-- HEADER commun -->
     <header>
       <div class="container nav">
         <a class="logo" href="../../index.html">diane&nbsp;breton</a>
@@ -17,7 +20,7 @@
         <ul class="menu">
           <li><a href="../../index.html#projets">Projets</a></li>
           <li><a href="../../index.html#services">Services</a></li>
-           <li><a href="../../index.html#etonnements">Étonnements</a></li>
+          <li><a href="../../index.html#etonnements">Étonnements</a></li>
           <li><a href="../../index.html#apropos">Studio</a></li>
           <li><a href="../../index.html#contact">Contact</a></li>
         </ul>
