change project pg

--- a/projets/projet1/index.html
+++ b/projets/projet1/index.html
@@ -36,32 +36,38 @@
     </section>
 
     <!-- Détails projet -->
-    <section class="projects" style="background:var(--accent);color:#fff;padding-top:4rem;">
-      <div class="container">
-        <h2>Le défi</h2>
-        <p style="max-width:60ch;margin-bottom:2rem;">Réinventer un quartier mixte intégrant logements, tiers‑lieu culturel et coulée verte. Notre mission : <strong>concept narratif</strong>, dossier graphique, storytelling pour la soutenance, coordination des rendus.</p>
+  <section class="project-content">
+    <div class="container">
+      <h2 class="accent-title">Le défi</h2>
+      <p class="lead">Réinventer un quartier mixte intégrant logements, tiers‑lieu culturel et coulée verte. Notre mission : <strong>concept narratif</strong>, dossier graphique, storytelling pour la soutenance, coordination des rendus.</p>
 
-        <h2>Éléments livrés</h2>
-        <ul style="line-height:1.8;">
-          <li>Mood‑board &amp; naming</li>
-          <li>Identité visuelle de l'opération</li>
-          <li>Mise en page du mémoire (56 pages)</li>
-          <li>Illustrations de principes d'aménagement</li>
-          <li>Préparation du support de soutenance</li>
-        </ul>
-
-        <h2>Galerie</h2>
-        <div class="grid" style="margin-top:2rem;">
-          <img src="../../assets/ville_urba.png" alt="Vue aérienne" class="card" />
-          <img src="../../assets/ville_arrosée.png" alt="Perspective végétale" class="card" />
-          <img src="../../assets/reunion.jpg" alt="Atelier" class="card" />
+      <div class="project-blocks">
+        <div class="project-block">
+          <h3>Éléments livrés</h3>
+          <ul>
+            <li>Mood-board & naming</li>
+            <li>Identité visuelle de l'opération</li>
+            <li>Mise en page du mémoire (56 pages)</li>
+            <li>Illustrations de principes d'aménagement</li>
+            <li>Préparation du support de soutenance</li>
+          </ul>
         </div>
-
-        <div style="margin-top:3rem;text-align:center;">
-          <a href="../../assets/ZAC_Belleville_Memoire.pdf" style="background:#fff;color:var(--accent);padding:0.75rem 1.5rem;border-radius:9999px;font-weight:600;text-decoration:none;">Télécharger le mémoire (PDF)</a>
+        <div class="project-block">
+          <h3>Galerie</h3>
+          <div class="grid gallery">
+            <img src="../../assets/ville_urba.png" alt="Vue aérienne" class="card" />
+            <img src="../../assets/ville_arrosée.png" alt="Perspective végétale" class="card" />
+            <img src="../../assets/reunion.jpg" alt="Atelier" class="card" />
+          </div>
         </div>
       </div>
-    </section>
+
+      <div style="text-align:center;margin:2.5rem 0 0;">
+        <a href="../../assets/ZAC_Belleville_Memoire.pdf" class="btn" style="font-size:1.1rem;">Télécharger le mémoire (PDF)</a>
+      </div>
+    </div>
+  </section>
+
 
     <footer>
       © <span id="year"></span> Diane Breton • Communication &amp; Concours &nbsp;•&nbsp; <a href="../../index.html" style="color:var(--text);text-decoration:none;">Retour à l'accueil</a>
