add all project pages

--- a/index.html
+++ b/index.html
@@ -45,21 +45,22 @@
               <img src="assets/esquisse_1.png" alt="Concours ZAC Belleville" />
               <div class="overlay"><h3>ZAC Belleville – Offre lauréate</h3></div>
             </a>
-            <article class="card fade" data-animate>
+            <a href="projets/projet1/" class="card fade" data-animate>
               <img src="assets/chateau.png" alt="Plaquette Siège Groupe Alta" />
               <div class="overlay"><h3>Alta Group – Plaquette siège social</h3></div>
-            </article>
-            <article class="card fade" data-animate>
+            </a>
+            <a href="projets/projet1/" class="card fade" data-animate>
               <img src="assets/ville_urba.png" alt="Identité Quartier Aster" />
               <div class="overlay"><h3>Quartier Aster – Branding urbain</h3></div>
-            </article>
-            <article class="card fade" data-animate>
+            </a>
+            <a href="projets/projet1/" class="card fade" data-animate>
               <img src="assets/reunion.jpg" alt="Concours MixCité" />
               <div class="overlay"><h3>MixCité 2024 – Dossier de consultation</h3></div>
-            </article>
-            <article class="card fade" data-animate>
+            </a>
+            <a href="projets/projet1/" class="card fade" data-animate>
               <img src="assets/ville_bleu.png" alt="Concours BatiHarmony" />
               <div class="overlay"><h3>Concours BatiHarmony – Offre lauréate</h3></div>
+            </a>
           </div>
         </div>
       </section>
