change services hero

--- a/poles/promoteurs/index.html
+++ b/poles/promoteurs/index.html
@@ -28,7 +28,7 @@
     </header>
 
     <!-- HERO -->
-    <section class="hero" style="min-height:60vh;background:url('assets/ville_urba.png') center/cover no-repeat;">
+    <section class="hero" style="min-height:60vh;background:url('../../assets/chateau.png') center/cover no-repeat;">
       <div class="container" style="background:rgba(255,255,255,0.8);padding:2rem 1.5rem;border-radius:0.75rem;max-width:720px;">
         <h1>Pôle Promoteurs immobiliers</h1>
         <p>De l’appel à projets à la commercialisation : un accompagnement créatif & technique taillé pour vos opérations.</p>
